feat(report): port engagement time-series report to pure-Spark Scala job
Replace the PySpark engagement_report_pyspark.py with a batch Scala job in the
spark-streaming-job module. Three plain aggregations over impression_time +
clicked — no Redis, no UDFs.

- EngagementReportJob: daily / by-hour / by-day-of-week CTR, same CSV outputs
  (ctr_daily, ctr_by_hour, ctr_by_dow)
- Drop the two unimplemented "future scope" stubs (STL / changepoint) — those
  belong to the Python stats ecosystem (statsmodels/ruptures), not Spark
- Rename output dir report-pyspark -> report-engagement (only the deleted file
  referenced the old name)
- build.sbt: add --add-exports=java.base/sun.util.calendar=ALL-UNNAMED to
  Test/javaOptions — collecting a Date/Timestamp column under JDK-17 hit an
  IllegalAccessError in the sbt test fork (spark-submit sets these flags in
  production); consistent with the flags already there
- run-engagement-sim.sh: point the report hint at the Scala job
- Trim test_engagement_sim.py to the backfill_producer unit tests

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>